# aproto

./: .gitignore  Cargo.toml  Makefile  help.sh
.github/workflows/: main.yaml  pr.yaml
crates/aproto/: Cargo.toml
crates/aproto-macros/: Cargo.toml
crates/aproto-types/: Cargo.toml
crates/aproto-types/proptest-regressions/fields/: mod.txt
crates/aproto-types/src/: lib.rs
crates/aproto-types/src/fields/: map.rs  message.rs  mod.rs  scalar.rs  utils.rs
crates/aproto/src/: encoding.rs  error.rs  lib.rs  varint.rs  wire_type.rs
crates/aproto/src/encoding/: varint.rs
