[workspace]
resolver = "2"
members = [
  "crates/*"
]

[workspace.dependencies]
aproto-types = { path = "./crates/aproto-types" }
aproto-macros = { path = "./crates/aproto-macros" }
anyhow = { version = "1.0.95" }
quote = { version = "1.0.38" }
proc-macro2 = { version = "1.0.92" }
syn = { version = "2", features = ["extra-traits"] }
bytes = { version = "1.9.0" }
